--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Vicki Lee</title>
+    </head>
+    <body>
+        <h1>Hello World testing</h1>
+    </body>
+</html>
