--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Vicki Lee</title>
     </head>
     <body>
-        <h1>Hello World testing #2</h1>
+        <h1><b>Vicki Lee</b> - Product Designer @ ComicGo</h1>
+        <h2>I'm a UX/UI designer based in San Francisco. I have experiences in UX, visual design, illustration, and front-end development.</h2>
+        <h3>Formerly CozmicGo, <a href="www.nylas.com">Nylas</a>, & <a href="www.thredup.com">thredUP</a>.</h3> 
     </body>
 </html>
