--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
         <title>Vicki Lee</title>
     </head>
     <body>
-        <h1><b>Vicki Lee</b> - Product Designer @ CozmicGo</h1>
-        <h2>I'm a UX/UI designer based in San Francisco. I have experiences in interaction design, visual design, illustration, and front-end development.</h2>
-        <h3>Formerly CozmicGo, <a href="www.nylas.com">Nylas</a>, & <a href="www.thredup.com">thredUP</a>.</h3> 
+        <h1>Vicki Lee</h1>
+        <h2>I'm a designer, developer, and illustrator in San Francisco.</h2>
+        <h3>Formerly CozmicGo, <a href="https://www.nylas.com">Nylas</a>, & <a href="https://www.thredup.com">thredUP</a>.</h3> 
+    <footer>
+        <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
+            <br><br>
+            Designed and built by Vicki Lee © 2019 <br>
+            Created with HTML & CSS on <a href="https://pages.github.com">Github Pages</a>.</p>
+    </footer>
+    
     </body>
 </html>
