--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <h1>Vicki Lee</h1>
         <h2>I'm a designer, developer, and illustrator in San Francisco.</h2>
         <h3>Formerly CozmicGo, <a href="https://www.nylas.com">Nylas</a>, & <a href="https://www.thredup.com">thredUP</a>.</h3> 
+        <img src= "thredUpPort.png" alt="thredUP">
+        <p>Product/UX Design</p>
     <footer>
         <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
