--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Vicki Lee</title>
     </head>
     <body>
         <h1>Vicki Lee</h1>
         <h2>I'm a designer, developer, and illustrator in San Francisco.</h2>
         <h3>Formerly CozmicGo, <a href="https://www.nylas.com">Nylas</a>, & <a href="https://www.thredup.com">thredUP</a>.</h3> 
-        <img src= "thredUpPort.png" alt="thredUP">
+        <div class="crop"><img src= "thredUpPort.png" alt="thredUP"></div>
         <p>Product/UX Design</p>
     <footer>
         <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
