--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h2>I'm a designer, developer, and illustrator in San Francisco.</h2>
         <h3>Formerly CozmicGo, <a href="https://www.nylas.com">Nylas</a>, & <a href="https://www.thredup.com">thredUP</a>.</h3> 
         <div class="crop"><img src= "thredUpPort.png" alt="thredUP"></div>
-        <p>Product/UX Design</p>
+        <div class="portfoliotitle"><p>Product/UX Design</p></div>
     <footer>
         <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
