centered header with margin around it

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Vicki Lee</title>
+        <title>Vicki Lee - Portfolio</title>
     </head>
     <body>
-        <h1>Vicki Lee</h1>
-        <h2>I'm a designer, developer, and illustrator in San Francisco.</h2>
-        <h3>Formerly CozmicGo, <a href="https://www.nylas.com">Nylas</a>, & <a href="https://www.thredup.com">thredUP</a>.</h3> 
-        <div class="crop"><img src= "thredUpPort.png" alt="thredUP"></div>
-        <div class="portfoliotitle"><p>Product/UX Design</p></div>
+        <br><br><br>
+        <div class="header">
+            <h2>Vicki Lee - Product Designer @ Discord 🎮</h2>
+            <h1>I'm a digital product & visual designer based in the SF Bay Area. My experience stems from UX research, typography, illustration, & print design.</h1>
+            <h3>Formerly <a href="https://www.nylas.com">Nylas</a> & <a href="https://www.thredup.com">thredUP</a>.</h3> 
+        </div>
+        <div class="crop">
+            <img src= "thredUpPort.png" alt="thredUP">
+            <p style="text-align:center;">Product/UX Design</p>
+        </div>
     <footer>
         <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
