made footer larger text

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         </div>
         <div class="crop">
             <img src= "thredUpPort.png" alt="thredUP">
-            <p style="text-align:center;">Product/UX Design</p>
+            <p style="text-align:left;">Product/UX Design</p>
         </div>
+    <br><br><br>
     <footer>
-        <p>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
+        <h3>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
             Designed and built by Vicki Lee © 2019 <br>
-            Created with HTML & CSS on <a href="https://pages.github.com">Github Pages</a>.</p>
+            Created with HTML & CSS on <a href="https://pages.github.com">Github Pages</a>.</h3>
     </footer>
     
     </body>
