added margin left to portfolio title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="crop">
             <img src= "thredUpPort.png" alt="thredUP">
-            <p style="text-align:left;">Product/UX Design</p>
+            <p class="portfoliotitle">Product/UX Design</p>
         </div>
     <br><br><br>
     <footer>
