--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <br><br><br>
         <div class="header">
-            <h2>Vicki Lee - Product Designer @ Discord 🎮</h2>
-            <h1>I'm a digital product & visual designer based in the SF Bay Area. My experience stems from UX research, typography, illustration, & print design.</h1>
-            <h3>Formerly <a href="https://www.nylas.com">Nylas</a> & <a href="https://www.thredup.com">thredUP</a>.</h3> 
+            <h2>Vicki Lee - Software Engineer 💻</h2>
+            <h1>I'm a software engineer with design experience based in San Francisco. </h1>
+            <h3>Languages: Javascript, React, Python, C++.</h3> 
         </div>
         <div class="crop">
             <img src= "thredUpPort.png" alt="thredUP">
@@ -19,7 +19,7 @@
     <footer>
         <h3>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
-            Designed and built by Vicki Lee © 2019 <br>
+            Designed and built by Vicki Lee © 2020 <br>
             Created with HTML & CSS on <a href="https://pages.github.com">Github Pages</a>.</h3>
     </footer>
     
