--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <body>
         <br><br><br>
         <div class="header">
-            <h2>Vicki Lee - Software Engineer 💻</h2>
+            <h2>Vicki Lee 🙋🏻</h2>
             <h1>I'm a software engineer with design experience based in San Francisco. </h1>
-            <h3>Languages: Javascript, React, Python, C++.</h3> 
+            <h3>👉🏼 Specialties: Javascript, React, Python, C++.</h3> 
+            <h3>👉🏼 Education: A.S. in Computer Science (CCSF) + courses on Udemy.</h3>
+            <h3>👉🏼 Background: Previously a UX/UI designer for startups.</h3>
         </div>
         <div class="crop">
             <img src= "thredUpPort.png" alt="thredUP">
