--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="header">
             <h2>Vicki Lee 🙋🏻</h2>
             <h1>I'm a software engineer with design experience based in San Francisco. </h1>
-            <h3>👉🏼 Specialties: Javascript, React, Python, C++.</h3> 
-            <h3>👉🏼 Education: A.S. in Computer Science (CCSF) + courses on Udemy.</h3>
+            <h3>👉🏼 Specialties: Javascript, React, HTML/CSS, Python, C++.</h3> 
+            <h3>👉🏼 Education: A.S. in Computer Science & self-taught online.</h3>
             <h3>👉🏼 Background: Previously a UX/UI designer for startups.</h3>
         </div>
         <div class="crop">
@@ -22,7 +22,7 @@
         <h3>Contact: <a href="mailto:vickihlee@gmail.com">vickihlee@gmail.com</a>
             <br><br>
             Designed and built by Vicki Lee © 2020 <br>
-            Created with HTML & CSS on <a href="https://pages.github.com">Github Pages</a>.</h3>
+            Created with HTML/CSS on <a href="https://pages.github.com">Github Pages</a>.</h3>
     </footer>
     
     </body>
